<resources>
    <string name="app_name">BloodDonation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_profile">Profile</string>
    <string name="action_Logout">Logout</string>
    <string name="title_activity_menu">Menu</string>


    <!--  Create Account Activity -->
    <string name="create_user_name">UserName</string>
    <string name="create_email">Email</string>
    <string name="create_password">Password</string>
    <string name="create_phoneNumber">Phone Number</string>
    <string name="create_Address">Address</string>
    <string name="create_select_city">Select City:</string>
    <string name="create_select_Blood_Group">Select Blood Group:</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="postbloodTitle">Title</string>
    <string name="postbloodCity">City</string>
    <string name="postbloodAddress">Address</string>
    <string name="postbloodblood">Blood Group</string>
    <string name="postbloodpPhoneNumber">PhoneNumber</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
