<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">
    <android.support.design.widget.CoordinatorLayout
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGround"
    tools:context="netroxtech.com.bloddonation.Activities.CreateUser">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/createAcount_Label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            >
           <android.support.v7.widget.CardView
               app:cardBackgroundColor="@color/cardColor"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Create Account"
                   android:layout_gravity="center"
                   android:textSize="20dp"
                   android:textColor="@color/textColor"
                   />
               </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/phoneNumber_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/createAcount_Label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_create_user_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/inputtextcolor"
                    android:textColor="@color/inputtextcolor"
                    android:hint="@string/create_phoneNumber" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    <!--  UserName Layout -->
        <LinearLayout
            android:id="@+id/userName_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/phoneNumber_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_create_user_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/inputtextcolor"
                    android:textColor="@color/inputtextcolor"
                    android:hint="@string/create_user_name" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--  Email Layout -->
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/userName_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColorHint="@color/inputtextcolor"
                    android:textColor="@color/inputtextcolor"
                    android:id="@+id/activity_create_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_email" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--  password Layout -->
        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/email_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textColorHint="@color/inputtextcolor"
                    android:textColor="@color/inputtextcolor"
                    android:id="@+id/activity_create_user_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_password" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!--  Select City Layout -->
        <LinearLayout
            android:id="@+id/city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/password_layout"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_select_city"
                android:paddingRight="40dp"            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:entries="@array/citiesNames"
            android:id="@+id/activity_create_user_city" />

        </LinearLayout>
        <!--  Select BooldGroup Layout -->
        <LinearLayout
            android:id="@+id/blood_group_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_select_Blood_Group"
                android:paddingRight="40dp"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:entries="@array/blooggroup"
                android:id="@+id/bloodGroup" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/addressMesag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blood_group_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_Address"
            android:paddingRight="40dp"            />
        </LinearLayout>
        <!--  Adddress Layout -->
        <LinearLayout
            android:id="@+id/Address_layout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@+id/addressMesag"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            >

                <ScrollView
                    android:id="@+id/ScrollView01"
                    android:background="@drawable/create_border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                    android:textColorHint="@color/textColor"
                    android:id="@+id/activity_create_user_address"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content" />
                </ScrollView>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/view"
            android:layout_marginTop="2dp"
            android:background="@color/blck"
            android:layout_below="@+id/Address_layout"
            >

        </View>
        <RelativeLayout
            android:id="@+id/button"
            android:layout_below="@+id/Address_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/angry_btn"
                android:text="Submit"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="200dp"
                android:layout_centerVertical="true"
                android:layout_height="40dp"
                android:background="@drawable/new_button_shap"
                android:shadowColor="#A83131"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"


                android:onClick="createAccountClick"
                />
        </RelativeLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
</ScrollView>
</layout>