<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/activity_post_blood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appBackGround"
            tools:context="netroxtech.com.bloddonation.Activities.PostBlood">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/bloodpostNeed_label"
                    >
                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@color/cardColor"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Add Blood Status"
                            android:layout_gravity="center"
                            android:textSize="25dp"
                            />
                    </android.support.v7.widget.CardView>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/postTitle_layout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/bloodpostNeed_label"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/blodpost_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/activity_status_blood_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/inputtextcolor"
                            android:textColor="@color/inputtextcolor"
                            android:hint="@string/postbloodTitle" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postPhoneNumber_layout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/postTitle_layout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:weightSum="1">


                    <DatePicker
                        android:background="@drawable/create_border"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/datePicker_status"
                        android:layout_weight="0.44"></DatePicker>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postAddress_layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/postPhoneNumber_layout"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_Address"
                        android:paddingRight="40dp"            />
                </LinearLayout>
                <!--  Adddress Layout -->
                <LinearLayout
                    android:id="@+id/postAddress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_below="@+id/postAddress_layout_title"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    >

                    <ScrollView
                        android:background="@drawable/create_border"
                        android:id="@+id/ScrollView01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:textColorHint="@color/inputtextcolor"
                            android:id="@+id/postBlood_status_address"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content" />
                    </ScrollView>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postcity_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/postAddress_layout"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_select_city"
                        android:paddingRight="40dp"            />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:entries="@array/citiesNames"
                        android:id="@+id/postBlood_status_city" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/postblood_group_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/postcity_layout">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_select_Blood_Group"
                        android:paddingRight="40dp"
                        />
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/password_layout"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:entries="@array/blooggroup"
                        android:id="@+id/postBlood_status" />
                </LinearLayout>
                <RelativeLayout android:layout_height="wrap_content"

                    android:layout_marginBottom="30dp"
                    android:id="@+id/postBloodButtton"
                    android:layout_centerHorizontal="true"

                    android:layout_below="@+id/postblood_group_layout"
                    android:layout_width="200dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Post Request"
                            android:id="@+id/post_status_btn"
                            android:background="@drawable/new_button_shap"
                            android:layout_gravity="center"

                            android:textColor="@color/textColor"
                            />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>
        </android.support.design.widget.CoordinatorLayout>
    </ScrollView>
</layout>